nginx-php-server/roles/common/files/iptables.rules
# Generated by iptables-save v1.4.14 on Fri Sep 19 08:43:56 2014
*filter
:INPUT DROP [22:5772]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [301:143843]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 110 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Fri Sep 19 08:43:56 2014
